hw/mcu/atmel: add CPU_CLOCK_FREQ_MHZ definition for SAMD21
Adds a new syscfg definition that allows users to
select the CPU clock frequency (in MHz) for SAMD21-based targets.

--- a/hw/mcu/atmel/samd21xx/syscfg.yml
+++ b/hw/mcu/atmel/samd21xx/syscfg.yml
@@ -23,6 +23,11 @@ syscfg.defs:
             Used internally by the newt tool.
         value: 1
 
+    CPU_CLOCK_FREQ_MHZ:
+        description: "CPU clock frequency in MHz"
+        value: 48
+        range: 1, 3, 6, 8, 12, 24, 48
+
     SPI_0:
         description: 'Whether to enable SPI0'
         value:  0
