mcu/stm32f1: Optimize clock configuration
Function SystemClock_Config was using STM32 HAL functions
for initial clock configuration.

Now code is switched to use STM32 LL functions to reduce
footprint.

Additional clock configuration syscfg vals are introduced.
PLL was force all the time.
Now it is possible to specify if PLL should be configured
and what is the source for system clock.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/mcu/stm/stm32f1xx/syscfg.yml
+++ b/hw/mcu/stm/stm32f1xx/syscfg.yml
@@ -59,13 +59,26 @@ syscfg.defs:
         description: HSI calibration value
         value: 'RCC_HSICALIBRATION_DEFAULT'
 
+    STM32_CLOCK_PLL:
+        description: Enable PLL
+        value: 1
+
     STM32_CLOCK_PLL_MUL:
         description: PLL clock multiplication
         value: 0
 
+    STM32_CLOCK_PLL_SOURCE:
+        description: Enable PLL
+        value: LL_RCC_PLLSOURCE_HSI_DIV_2
+
     STM32_CLOCK_PREDIV:
         description: HSE clock divider (pre PLL)
         value: 'RCC_HSE_PREDIV_DIV1'
+
+    STM32_CLOCK_SYSCLK_SOURCE:
+        description: >
+            System clock selection
+        value: LL_RCC_SYS_CLKSOURCE_HSI
 
     STM32_CLOCK_AHB_DIVIDER:
         description: AHB prescaler
