--- a/hw/bsp/olimex-p103/syscfg.yml
+++ b/hw/bsp/olimex-p103/syscfg.yml
@@ -31,6 +31,8 @@ syscfg.vals:
     STM32_CLOCK_HSI: 1
     STM32_CLOCK_HSE: 1
     STM32_CLOCK_HSE_BYPASS: 0
+    STM32_CLOCK_SYSCLK_SOURCE: LL_RCC_SYS_CLKSOURCE_PLL
+    STM32_CLOCK_PLL_SOURCE: LL_RCC_PLLSOURCE_HSE
     STM32_CLOCK_PLL_MUL: 'RCC_PLL_MUL9'
     STM32_CLOCK_PREDIV: 'RCC_HSE_PREDIV_DIV1'
     STM32_CLOCK_AHB_DIVIDER: 'RCC_SYSCLK_DIV1'
