tinyusb/dfu: Add runtime DFU support
Runtime DFU specification allows to reconfigure
USB device fof DFU.
This may be useful when normal DFU that actually
overwrites firmware can't be run to update itself.
This is true for single slot builds.

Default mynewt implementation writes magic value
to specific NVReg and does reboot.
DFU code in bootloaer will then detect this condition
and start USB DFU in bootloader allowing application
slot to be updated.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/usb/tinyusb/dfu/pkg.yml
+++ b/hw/usb/tinyusb/dfu/pkg.yml
@@ -29,8 +29,16 @@ pkg.deps:
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/usb/tinyusb"
+
+pkg.deps.USBD_DFU:
     - "@apache-mynewt-core/mgmt/imgmgr"
     - "@mcuboot/boot/bootutil"
+
+pkg.source_files.USBD_DFU:
+    - src/dfu.c
+
+pkg.source_files.USBD_DFU_RUNTIME:
+    - src/dfu_runtime.c
 
 pkg.init.USBD_DFU_AUTO_CONFIRM:
     dfu_init: 'MYNEWT_VAL(USBD_DFU_SYSINIT_STAGE)'
