ci: Execute newt test with super powers
This is required by latest MacOS runners (see [1]) and
doesn't affect Linux. For simplicity keep same job for all.

[1] https://github.com/actions/runner-images/issues/10924

--- a/.github/workflows/newt_test_all.yml
+++ b/.github/workflows/newt_test_all.yml
@@ -60,6 +60,7 @@ jobs:
              newt upgrade --shallow=1
              cd ..
       - name: newt test all
+        shell: bash
         run: |
              cd build
-             newt test all
+             sudo `which newt` test all
