hw/bsp: Enable nRF5340 network core when HCI transport is selected
There is no point in not enabling networking core when HCI transport
is selected. This makes it a bit more user friendly since one doesn't
have to do this in target.

--- a/hw/bsp/nordic_pca10095/syscfg.yml
+++ b/hw/bsp/nordic_pca10095/syscfg.yml
@@ -106,6 +106,7 @@ syscfg.vals.BLE_HOST:
 
 syscfg.vals.BLE_TRANSPORT:
     BLE_TRANSPORT_LL: nrf5340
+    BSP_NRF5340_NET_ENABLE: 1
 
 syscfg.vals.BSP_NRF5340_NET_ENABLE:
     BSP_NRF5340_NET_FLASH_ENABLE: 1
