--- a/hw/bsp/stm32f3discovery/syscfg.yml
+++ b/hw/bsp/stm32f3discovery/syscfg.yml
@@ -72,5 +72,8 @@ syscfg.vals:
     MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
     JLINK_TARGET: STM32F303VC
 
+syscfg.vals.BOOT_LOADER:
+    UART_0: 0
+
 syscfg.restrictions:
     - "!LSM303DLHC_ONB || I2C_0"
