--- a/hw/mcu/nordic/nrf5340/syscfg.yml
+++ b/hw/mcu/nordic/nrf5340/syscfg.yml
@@ -595,8 +595,8 @@ syscfg.vals:
     OS_TICKS_PER_SEC: 128
 
 syscfg.vals.CORTEX_DEFAULT_STARTUP:
-    MCU_RAM_START: 0x20000000
-    MCU_RAM_SIZE: 0x80000
+    MCU_RAM_START: 0x20000400
+    MCU_RAM_SIZE: 0x7FC00
 
 syscfg.restrictions:
     - "!UART_0 || (UART_0_PIN_TX != -1 && UART_0_PIN_RX != -1)"
