--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -20,8 +20,8 @@
 name: Compliance check
 
 on:
-  pull_request_target:
-    types: [opened, synchronize, reopened, synchronize, labeled, unlabeled]
+  pull_request:
+    types: [opened, synchronize, reopened, labeled, unlabeled]
 
 
 jobs:
